 - support jinja2 as a templating engine.  Drop the hard requirement on
   cheetah.  This helps in python3 effort. (LP: #1219223)
 - change install path for systemd files to /lib/systemd/system
   [Dimitri John Ledkov]
 - change trunk debian packaging to use pybuild and drop cdbs.
   [Dimitri John Ledkov]
 - SeLinuxGuard: remove invalid check that looked for stat.st_mode in os.lstat.
0.7.5:
 - open 0.7.5
 - Add a debug log message around import failures
 - add a 'debug' module for easily printing out some information about
   datasource and cloud-init [Shraddha Pandhe]
 - support running apt with 'eatmydata' via configuration token
   apt_get_wrapper (LP: #1236531).
 - convert paths provided in config-drive 'files' to string before writing
   (LP: #1260072).
 - Azure: minor changes in logging output. ensure filenames are strings (not
   unicode).
 - config/cloud.cfg.d/05_logging.cfg: provide a default 'output' setting, to
   redirect cloud-init stderr and stdout /var/log/cloud-init-output.log.
 - drop support for resizing partitions with parted entirely (LP: #1212492).
   This was broken as it was anyway.
 - add support for vendordata in SmartOS and NoCloud datasources.
 - drop dependency on boto for crawling ec2 metadata service.
 - add 'Requires' on sudo (for OpenNebula datasource) in rpm specs, and
   'Recommends' in the debian/control.in [Vlastimil Holer]
 - if mount_info reports /dev/root is a device path for /, then convert
   that to a device via help of kernel cmdline.
 - configdrive: consider partitions as possible datasources if they have
   theh correct filesystem label. [Paul Querna]
 - initial freebsd support [Harm Weites]
 - fix in is_ipv4 to accept IP addresses with a '0' in them.
 - Azure: fix issue when stale data in /var/lib/waagent (LP: #1269626)
 - skip config_modules that declare themselves only verified on a set of
   distros.  Add them to 'unverified_modules' list to run anyway.
 - Add CloudSigma datasource [Kiril Vladimiroff]