@@ -31,8 +31,6 @@ LOG = logging.getLogger(__name__)
 class Distro(distros.Distro):
     locale_conf_fn = "/etc/locale.gen"
     network_conf_fn = "/etc/conf.d/net"
-    tz_conf_fn = "/etc/timezone"
-    tz_local_fn = "/etc/localtime"
     init_cmd = ['']  # init scripts
 
     def __init__(self, name, cfg, paths):
@@ -140,16 +138,7 @@ class Distro(distros.Distro):
         return hostname
 
     def set_timezone(self, tz):
-        tz_file = self._find_tz_file(tz)
-        # Note: "" provides trailing newline during join
-        tz_lines = [
-            util.make_header(),
-            str(tz),
-            "",
-        ]
-        util.write_file(self.tz_conf_fn, "\n".join(tz_lines))
-        # This ensures that the correct tz will be used for the system
-        util.copy(tz_file, self.tz_local_fn)
+        set_etc_timezone(tz=tz, tz_file=self._find_tz_file(tz))
 
     def package_command(self, command, args=None, pkgs=None):
         if pkgs is None:
